layout shift fix

--- a/src/components/mainpage/mainpage.css
+++ b/src/components/mainpage/mainpage.css
@@ -1,6 +1,6 @@
 .main-container {
-    width: 100vw;
-    height: 100vh;
+    width: 100%;
+    height: 100%;
     padding: 6rem 20% 6rem 20%;
 }
 .dimmed-screen {
